# filterSqp

./: CMakeLists.txt  README.md  find_root.cpp  find_root.h  gradient_descent.cpp  gradient_descent.h  himmelblau.cpp  himmelblau.h  lm_optim.cpp  lm_optim.h  main.cpp  papersheet.cpp  papersheet.h  rosenbrock.cpp  rosenbrock.h  snakeA.cpp  snakeA.h  test_ad.cpp  test_adept.cpp  test_fadbad.cpp  test_findroot.cpp  test_gd.cpp  test_gsl.cpp  test_lm.cpp  test_lm_pato.cpp  test_paper.cpp  test_snakeA.cpp  tr_optim.cpp  tr_optim.h
demo/: plot_rosen.py  plotcirc.py  plotmesh.py  rootfind_test.py
